--- a/ps_spec.yaml
+++ b/ps_spec.yaml
@@ -1157,6 +1157,8 @@ components:
           #   $ref: '#/components/schemas/aanspraakBijzonderPartnerPensioen'
         required:
           - pensioenRegeling
+          - aanspraak
+          - aanspraakPartner
 
     pensioenRegeling:
       type: object
