--- a/ps_spec.yaml
+++ b/ps_spec.yaml
@@ -477,7 +477,7 @@ paths:
                       initialen: "A.B."
                       achternaam: "de Boer"
                       voorkeursnaam: "A.B. de Boer"
-                      verwantschapType: "gehuwd"
+                      verwantschapType: "GEHUWD"
                       relatieStart: "2015-03-10"
                       relatieEind: "2023-08-22"
                 DIVORCE_CONFIRM:
@@ -494,7 +494,7 @@ paths:
                       voorkeursnaam: "A.B. de Boer"
                       gender: "Man"
                       geboortedatum: "1985-02-21"
-                      verwantschapType: "gehuwd"
+                      verwantschapType: "GEHUWD"
                       relatieStart: "2015-03-10"
                       relatieEind: "2023-08-22"
                     userInfoAddress:
@@ -985,8 +985,8 @@ components:
           example: 1985-02-21
         verwantschapType:
           type: string
-          description: describes the legal relationship status of the user. Can be "gehuwd", "geregistreerd als partner" or "ongehuwd en niet als partner geregistreerd". Datasources MAY provide more detailed status such as "gescheiden", "weduwnaar", "gescheiden van tafel en bed" or non-formal status such as "samenwonend" or "fiscaal partner".
-          example: gehuwd
+          description: describes the legal relationship status of the user. Can be one of the official or un-official terms. Official "GEHUWD", "GEREGISTREERD ALS PARTNER" or "ONGEHUWD EN NIET ALS PARTNER GEREGISTREERD". Un-official "GESCHEIDEN", "WEDUWNAAR", "GESCHEIDEN VAN TAFEL EN BED" or non-formal status such as "SAMENWONEND" or "FISCAAL PARTNER".
+          example: GEHUWD
         relatieStart:
           type: string
           description: official starting date of the formal relation between user and partner, e.g. wedding date
